--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,61 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>exWidget</title>
+    <!-- style preloading process while app bundle is loading -->
+    <style>
+      .before-app-preloader {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgb(243, 244, 245);
+        z-index: 1;
+        opacity: 1;
+        transition: opacity 300ms;
+      }
+      .before-app-preloader.hidden {
+        opacity: 0;
+      }
+      .before-app-preloader__spinner {
+        width: 60px;
+        height: 60px;
+        border: 10px solid rgba(255, 255, 255, 0.5);
+        margin: 100px auto;
+        background-color: rgb(0, 112, 237);
+        border-radius: 100%;
+        -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
+        animation: sk-scaleout 2.0s infinite ease-in-out;
+      }
+      @-webkit-keyframes sk-scaleout {
+        0% { -webkit-transform: scale(0) }
+        100% {
+          -webkit-transform: scale(1.0);
+          opacity: 0;
+        }
+      }
+
+      @keyframes sk-scaleout {
+        0% {
+          -webkit-transform: scale(0);
+          transform: scale(0);
+        } 100% {
+            -webkit-transform: scale(1.0);
+            transform: scale(1.0);
+            opacity: 0;
+          }
+      }
+    </style>
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <div class="before-app-preloader" id="before-app-preloader">
+      <div class="before-app-preloader__spinner"></div>
+    </div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
